--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "dayjs": "^1.6.6",
     "element-ui": "^2.3.5",
     "eslint-plugin-html": "^4.0.3",
     "less": "^3.0.1",
