--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_25e713513946_key -iv $encrypted_25e713513946_iv
   -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
 addons:
   ssh_known_hosts: "$IP"
 branches:
